--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,24 @@
+plugins {
+    id 'net.ltgt.apt' version '0.9'
+}
 ext {
     group 'org.foryou'
     version '1.0'
+    springBootVersion = '2.0.0.RELEASE'
 }
-
 allprojects{
+    apply plugin: 'idea'
+    apply plugin: 'java'
+    sourceCompatibility = 1.8
+    //打包使用utf-8编码
+    compileJava.options.encoding = "UTF-8"
     repositories {
         jcenter()
     }
 }
 
 subprojects{
-    apply plugin: 'java'
-    sourceCompatibility = 1.8
-    //打包使用utf-8编码
-    compileJava.options.encoding = "UTF-8"
-    ext {
-        springBootVersion = '2.0.0.RELEASE'
-    }
-
+    apply plugin: "net.ltgt.apt"
     dependencies {
         testCompile group: 'junit', name: 'junit', version: '4.12'
     }
