时间转换器

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,13 +1,8 @@
 apply plugin: 'war'
 
-configurations {
-    providedRuntime
-}
-
-
 dependencies {
     compile project(":core")
     compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
-    providedRuntime("org.springframework.boot:spring-boot-starter-tomcat:${springBootVersion}")
+    compile("org.springframework.boot:spring-boot-starter-tomcat:${springBootVersion}")
     testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
 }
