--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ allprojects{
 subprojects{
     apply plugin: "net.ltgt.apt"
     dependencies {
+        compile 'org.mapstruct:mapstruct-jdk8:1.1.0.Final'
+        apt 'org.mapstruct:mapstruct-processor:1.1.0.Final'
         testCompile group: 'junit', name: 'junit', version: '4.12'
     }
 }
