--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,6 +1,4 @@
 dependencies {
-    compile group: 'commons-io', name: 'commons-io', version: '2.4'
-
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: "${springBootVersion}"
 
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: "${springBootVersion}"
@@ -29,4 +27,7 @@ dependencies {
 
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.5'
 
+    compile group: 'commons-io', name: 'commons-io', version: '2.4'
+
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
 }
