--- a/core/build.gradle
+++ b/core/build.gradle
@@ -15,6 +15,10 @@ dependencies {
 
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: "${springBootVersion}"
 
+    compile group: 'com.github.pagehelper', name: 'pagehelper-spring-boot-starter', version: '1.2.3'
+
+    compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '1.3.2'
+
     compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
 
     compile group: 'org.redisson', name: 'redisson', version: '3.6.3'
