初始化log配置

--- a/admin/src/main/resources/application.properties
+++ b/admin/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.profiles.active=online
+#log
+logging.config=classpath:logback-spring.xml
 # mybatis
 mybatis.typeAliasesPackage=org.foryou.dao
 mybatis.mapperLocations=classpath*:**/sql/*.xml
